# ENGRAFT-TPM

./: .gitignore  CMakeLists.txt  CMakeLists_NoSGX.txt  README.md  dev_key_priv.pem  dev_key_pub.pem  init_env.sh  interface.edl  rm_data.sh  setup_tpm_counters.sh
cmake/: FindProtobuf.cmake
example/counter/: CMakeLists.txt  CMakeLists_NoSGX.txt  MYFindProtobuf.cmake  server.cpp  sgx_raft.conf
example/kv_store/: CMakeLists.txt  kve.pb.cc  kve.pb.h  kve.proto  kve_server.cpp  kvenclave.conf
runtime/: cmd.gdb  local_start_cluster.sh  run.sh  start_cluster.sh  temple.sh
src/attest_utils/: attestation.cpp  crypto.cpp  crypto.h  dev_key_pub.h  dispatcher.cpp  dispatcher.h  local_attest.cpp  local_attest.pb.cc  local_attest.pb.h
src/braft/: log_enc.cpp  log_enc_state_cont.cpp  node.cpp  protobuf_file.cpp
src/brpc/new_proto/: proto.txt  temple_proto_gen.sh
src/host/: CMakeLists.txt  entry.cpp  host_ipc.cpp  host_ipc.h  host_tpm_utils.cpp  host_tpm_utils.h
src/sgxbutil/: enclave.cpp
src/sgxbutil/state_cont/: monotonic_counter.cpp  openssl_utils.cpp  openssl_utils.h  tpm_counter.cpp  virtual_counter.cpp
tools/: braft_cli.cpp
